--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     },
     "require": {
         "guzzlehttp/guzzle": "^7.8",
-        "mikey179/vfsstream": "^1.6"
+        "mikey179/vfsstream": "^1.6",
+        "imangazaliev/didom": "^2.0"
     }
 }
