--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,8 @@
     "type": "project",
     "autoload": {
         "psr-4": {
-            "Downloader\\Downloader\\": "bin/",
-            "Tests\\": "tests/"
+            "Hexlet\\Code\\": "src/",
+            "Hexlet\\Code\\Tests\\": "tests/"
         }
     },
     "authors": [
