--- a/composer.json
+++ b/composer.json
@@ -1,38 +1,27 @@
 {
     "name": "hexlet/code",
-    "description": "Downloader for web-pages",
+    "description": "page loader project on a hexlet PHPUnit course",
     "type": "project",
-    "minimum-stability": "stable",
-    "require": {
-        "guzzlehttp/guzzle": "^7.0",
-        "ext-json": "*",
-        "mikey179/vfsstream": "^1.6",
-        "symfony/console": "^6.3",
-        "imangazaliev/didom": "^2.0",
-        "monolog/monolog": "^3.4"
-    },
-    "require-dev": {
-        "squizlabs/php_codesniffer": "^3.7",
-        "phpstan/phpstan": "^1.10",
-        "phpunit/phpunit": "^8.0",
-        "phpstan/phpstan-strict-rules": "^1.5",
-        "hexlet/phpstan-fp": "^2.0"
-    },
-    "license": "mit",
     "autoload": {
         "psr-4": {
             "Hexlet\\Code\\": "src/",
             "Hexlet\\Code\\Tests\\": "tests/"
-        },
-        "files": [
-            "extra/function.php"
-        ]
+        }
     },
-    "bin": ["bin/page-loader"],
+    "bin": ["bin/page-loader.php"],
     "authors": [
         {
-            "name": "Igor Telmenko",
-            "email": "igor-telmenko@yandex.ru"
+            "name": "Petr Dobrokhotov",
+            "email": "dobrokhotovp@gmail.com"
         }
-    ]
+    ],
+    "require-dev": {
+        "phpunit/phpunit": "^10.4"
+    },
+    "require": {
+        "guzzlehttp/guzzle": "^7.8",
+        "mikey179/vfsstream": "^1.6",
+        "imangazaliev/didom": "^2.0",
+        "monolog/monolog": "^3.5"
+    }
 }
